承認・承認待ち一覧

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,3 +66,7 @@
     display: flex;
     justify-content: space-between;
   }
+  .flex-ex{
+    display: flex;
+    justify-content: space-around;
+  }
