ページネーション（手動）

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <div class="navbar-fixed z-depth-3">
         <nav class="nav-wrapper">
           <div class="container">
-            <a href="/" class="brand-logo left">Logo</a>
+            <a href="/" class="brand-logo left">Gakuchika！</a>
             <a data-target="mobile-links" class="right sidenav-trigger"><i class="material-icons">menu</i></a>
             <div class="menu">
               <ul class="right hide-on-med-and-down">
@@ -52,7 +52,7 @@
     <footer class="page-footer">
       <div class="footer-copyright" style="background-color: #64B5F6;">
         <div class="container flex">
-        <p>© 2014 Copyright Text</p>
+        <p>© 2021 Copyright Text</p>
         <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
         </div>
       </div>
