--- a/app/views/applies/index.html.erb
+++ b/app/views/applies/index.html.erb
@@ -19,7 +19,7 @@
               <div class="col s6 m6 l6 flex-ex">
                 <div>
                   <%= link_to quest_joins_path(app.quest, user_id: app.user.id, apply_id: app.id), method: :post do %>
-                    <button class="btn green darken-1 waves-effect waves-light">承認</button>
+                    <button class="btn green darken-1 waves-effect waves-light pulse">承認</button>
                   <% end %>
                 </div>
                 <div>
