トップページに要素追加

--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -86,6 +86,26 @@
   <div class="parallax"><img src="/assets/tochi046.jpeg" alt="Unsplashed background img 2"></div>
 </div>
 
+<div class="container row z-depth-5 teal lighten-5" style="width: 100%;height: 100%;max-width: 100%;margin: auto;">
+  <div class="container">
+      <div class="row center">
+        <h4 class="header col s12">やらない善よりやる偽善</h4>
+      </div>
+      <div class="row">
+        <p style="font-size: 20px;">元々は某掲示板で「折り鶴13万羽プロジェクト」が立ち上げられた際に、ボランティア活動や慈善活動に対する批判・中傷的な発言への反論として
+        「偽善や自己満足であっても、パソコンの前から人の行為を非難するだけで何もしない奴よりはマシ」という反論の意味を込めて生まれた言葉です。
+        <br>発祥の経緯からもそうであるように、本アプリも偽善を推奨する訳ではありませんが、行動を起こすのにアレコレ考えすぎてがんじがらめになっていませんか？
+        もちろん良く考えて行動することは一番大切ですが、実際に行動してみて現地を知って初めて分かることも多いと思います。
+        <br>このアプリで思い切って行動してみましょう！<br>そう！やらない善よりやる偽善です！</p>
+        <br>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="parallax-container valign-wrapper">
+  <div class="parallax"><img src="/assets/ER6_1650_TP_V.jpg" alt="Unsplashed background img 2"></div>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script>
