--- a/app/views/quests/index.html.erb
+++ b/app/views/quests/index.html.erb
@@ -2,7 +2,7 @@
   <div class="section no-pad-bot">
     <div class="container">
       <br><br>
-      <h1 class="header center amber-text text-darken-2 ">＃ ガ ク チ カ ！</h1>
+      <h1 class="header center amber-text text-darken-2 ">ガ ク チ カ ！</h1>
       <div class="row center">
         <h5 class="header col s12">やらない善よりやる偽善</h5>
       </div>
