--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -78,7 +78,7 @@
           <div class="actions right-align">
             <button class="btn waves-effect waves-light"><%= f.submit "登録変更" %></button>
           </div>
-          <button class="btn waves-effect waves-teal btn-flat"><a href="<%= user_path(@user) %>">マイページに戻る</a></button>
+          <button class="btn amber lighten-3 waves-effect waves-light"><a href="<%= user_path(@user) %>">マイページに戻る</a></button>
         </div>
       <% end %>
     </div>
