--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -45,7 +45,7 @@
           <div class="actions right-align">
             <button class="btn waves-effect waves-light"><%= f.submit "登録する" %><i class="material-icons right">send</i></button>
           </div>
-          <button class="btn waves-effect waves-teal btn-flat"><%= render "devise/shared/links" %></button>
+          <%= render "devise/shared/links" %>
         </div>
       <% end %>
     </div>
