--- a/app/views/joins/index.html.erb
+++ b/app/views/joins/index.html.erb
@@ -22,7 +22,9 @@
           <P>参加者はいません</p>
         <% end %>
         <%= link_to :back do %>
-          <button class="btn waves-effect waves-teal btn-flat">戻る</button>
+          <button class="btn amber lighten-3 waves-effect waves-light teal-text text-lighten-1" style="margin-bottom: 20px;">
+            戻る
+          </button>
         <% end %>
     </div>
   </div>
