--- a/app/views/quests/edit.html.erb
+++ b/app/views/quests/edit.html.erb
@@ -7,7 +7,7 @@
 
       <%= render 'layouts/quest_form', model: @quest %>
       
-      <button class="btn waves-effect waves-teal btn-flat"><a href="<%= quest_path(@quest) %>">案件詳細へ</a>
+      <button class="btn amber lighten-3 waves-effect waves-light" style="margin-bottom: 20px;"><a href="<%= quest_path(@quest) %>" class="teal-text text-lighten-1">案件詳細へ</a>
     </div>
   </div>
 </div>
