--- a/app/views/quests/new.html.erb
+++ b/app/views/quests/new.html.erb
@@ -6,8 +6,8 @@
       <br><br>
 
       <%= render 'layouts/quest_form', model: @quest %>
-      <br />
-      <button class="btn waves-effect waves-teal btn-flat"><a href="<%= user_path(current_user) %>">マイページに戻る</a></button>
+      <br>
+      <button class="btn amber lighten-3 waves-effect waves-light" style="margin-bottom: 20px;"><a href="<%= user_path(current_user) %>" class="teal-text text-lighten-1">マイページに戻る</a></button>
     </div>
   </div>
 </div>
