--- a/app/views/quests/show.html.erb
+++ b/app/views/quests/show.html.erb
@@ -221,7 +221,7 @@
       <% end %>
       
       
-      <button class="btn waves-effect waves-teal btn-flat"><a href="/">トップページへ</a></button>
+      <button class="btn amber lighten-3 waves-effect waves-light" style="margin-bottom: 20px;"><a href="/" class="teal-text text-lighten-1">トップページへ</a></button>
     </div>
   </div>
 </div>
